# atrucks_365

./: .dockerignore  .env  .env.docker  .gitignore  Makefile  README.md
backend/: .gitignore  pyproject.toml
backend/notebooks/: devel.ipynb
backend/src/abcdef/: admin.py  helpers.py  tasks.py  urls.py
backend/src/abcdef/migrations/: 0001_initial.py  0002_alter_opsos_name.py  0002_downloadinfo_delete_originfile.py  0003_alter_territory_name.py  0003_downloadinfo_link.py  0004_alter_phonenorm_num_max_alter_phonenorm_num_min.py  0004_remove_downloadinfo_is_success_downloadinfo_is_added_and_more.py  0005_alter_territory_options.py  0005_phone.py  0006_alter_phone_unique_together.py  0006_alter_phonenorm_unique_together.py  0007_alter_phone_num_end_alter_phone_num_start.py  0007_alter_phonenorm_num_prefix.py  0008_alter_phone_territory.py  0008_alter_phonenorm_num_prefix.py  0009_alter_phone_territory.py  0009_alter_phone_unique_together_phone_num_max_and_more.py  0010_alter_phone_unique_together.py  0010_remove_phone_territory.py  0011_alter_phone_num_prefix.py  0011_phone_territory.py  0012_alter_phone_region.py
backend/src/abcdef/models/: __init__.py  download_info.py  phone.py
backend/src/abcdef/serializers/: download_info.py  phone.py
backend/src/abcdef/views/: download_info.py  phone.py
backend/src/core/: asgi.py  urls.py  wsgi.py
backend/src/core/settings/: __init__.py  base.py  celery.py  cors.py  dev.py  (+6 more)
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_abcdef_api.py
backend/tests/units/: test_abcdef_models.py  test_abcdef_tasks.py
(+67 files in other folders)
